myingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  tls:
  - hosts:
    - cgi-challenge.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: cgi-challenge.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-ingress-ingress-nginx-controller
            port:
              number: 80
